# CS3013-OS-Project2

./: CMakeLists.txt  README.txt  Task  main  makefile  problem_explanation.txt  test_output.txt
include/: baseball.h  football.h  player.h  rugby.h  shared.h  utils.h
src/: baseball.c  football.c  main.c  player.c  rugby.c  shared.c  utils.c
